# agentic-reminder-app

./: .env.example  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  test.py
agent/: loop.py  storage.py
agent/tools/: definitions.py  handlers.py
